<resources>
    <string name="app_name">Hero Me</string>
    <string name="accident">Came by accident</string>
    <string name="mutation">Genetic mutation</string>
    <string name="birth">Born with them</string>
    <string name="choose_powers">Choose Powers</string>
    <string name="power_acquisition">How did you get your powers?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
