<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/hero_bg_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="whitaker.anthony.herome.fragment.MainFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorToolbarBackground"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/topbannerbar"
            tools:ignore="ContentDescription" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/power_acquisition"
        android:textColor="@color/colorSunglow"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/heroes"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.538"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/accidentButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/hero_button"
        android:drawableStart="@drawable/lightning_icon"
        android:paddingBottom="16dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:text="@string/accident"
        android:textAllCaps="false"
        android:textColor="@color/colorSunglow"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/mutationButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/hero_button"
        android:drawableStart="@drawable/atomic_icon"
        android:paddingBottom="16dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:text="@string/mutation"
        android:textAllCaps="false"
        android:textColor="@color/colorSunglow"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintVertical_weight="1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/accidentButton"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/accidentButton"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/accidentButton"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/birthButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/hero_button"
        android:drawableStart="@drawable/rocket_icon"
        android:paddingBottom="16dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:text="@string/birth"
        android:textAllCaps="false"
        android:textColor="@color/colorSunglow"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintVertical_weight="1"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/mutationButton"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/mutationButton"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/mutationButton"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/choosePowersButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/hero_solid_button"
        android:padding="16dp"
        android:paddingBottom="16dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:text="@string/choose_powers"
        android:textColor="@color/colorGradientEdge"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/birthButton"
        app:layout_constraintRight_toRightOf="@+id/birthButton"
        app:layout_constraintTop_toBottomOf="@+id/birthButton"
        app:layout_constraintVertical_weight="1" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

</android.support.constraint.ConstraintLayout>
